--- a/app/templates/news/detail.html
+++ b/app/templates/news/detail.html
@@ -4,7 +4,7 @@
 {% block page_title %}Tin Tức{% endblock %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/news-style.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/news-style.css') }}?v={{ config.VERSION }} }}">
 <style>
 /* Animation cho comment mới */
 @keyframes flashNew {
